objects/Test_Factory_Product_Base_SKU__mdt/Test_Factory_Product_Base_SKU__mdt.object-meta.xml
<CustomObject>
    <label>Test Factory Product Base SKU</label>
    <pluralLabel>Test Factory Product Base SKUs</pluralLabel>
</CustomObject>