objects/Test_Factory_Product_Base_SKU__mdt/fields/Pricebook_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Assignment__c</fullName>
    <label>Pricebook Assignment</label>
    <referenceTo>Pricebook_Assignments__mdt</referenceTo>
    <relationshipLabel>Test Factory Product Base SKUs</relationshipLabel>
    <relationshipName>Test_Factory_Product_Base_SKUs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>