objects/Test_Factory_Product_Base_SKU__mdt/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <label>Pricebook Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>