objects/Test_Factory_Product_Base_SKU__mdt/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>